Fixing up spacings and working on form

--- a/sfa/_sass/_carousel.scss
+++ b/sfa/_sass/_carousel.scss
@@ -56,6 +56,15 @@
 	.bg-dark-trans {
 		width: 60%;
 		float: right;
+
+		h1 {
+			font-family: $base-font-family;
+			font-size: 18px;
+		}
+
+		p {
+			font-size: 14px;
+		}
 	}
 }
 
@@ -64,14 +73,16 @@
 	opacity: 1;
 }
 
-.js-carousel-section.left{
+/* Commented out because sliding effect causes there to be overflow on the sides (on mobile)*/
+
+/*.js-carousel-section.left{
 	left: -100%;
 }
 
 .js-carousel-section.right{
 	left: 100%;
 }
-
+*/
 .js-carousel-control{
 	position: relative;
 	width: 35%;
@@ -81,8 +92,10 @@
 	padding: 10px 0;
 
 	.control{
+
 		h1{
-			font-size: 24px;
+			/*font-size: 24px;*/
+			font-size: 12px;
 			padding: 15px 20px;
 			background: rgba(0,0,0,0.4);
 			color: #FFF;
@@ -93,8 +106,9 @@
 		i {
 			color: rgba(255,255,255,0.3);
 			float: right;
-			line-height: 58px;
-			font-size: 24px;
+			/*line-height: 58px;
+			font-size: 24px;*/
+			font-size: 12px;
 			padding-right: 10px;
 			transition: color ease .2s;
 		}
@@ -113,9 +127,36 @@
 
 	.js-carousel-section{
 		padding: 30px 0;
+
+		.bg-dark-trans {
+		width: 60%;
+		float: right;
+
+		h1 {
+			font-size: 24px;
+		}
+
+		p {
+			font-size: 18px;
+		}
+	}
 	}
 
 	.js-carousel-control{
 		padding: 50px 0;
+
+		.control{
+			padding: 5px 0;
+
+			h1 {
+				font-size: 24px;
+			}
+
+			i {
+				line-height: 58px;
+				font-size: 24px;
+			}
+		}
 	}
+
 }
